--- a/prac03/prac03.html
+++ b/prac03/prac03.html
@@ -13252,11 +13252,7 @@ $\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\in
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>1. (2 балл)</strong></p>
-<ul>
-<li>(1) Доказать, что верхний предел алгебры, порожденной системой $\{A_1,\ldots, A_n\}$, где $A_i\subset\Omega$, $i = 1,\ldots, n$ состоит из $2^{2^n}$ элементов. </li>
-<li>(+1) Найти пример системы множеств, когда это не так.</li>
-</ul>
+<p><strong>1. (1 балл)</strong> Пусть $A_1, A_2, \ldots, A_n,\ldots$ некоторые подмножества $\Omega$, постройте минимальную $\sigma$-алгебру, включающую $A_1, A_2,\ldots, A_n, \ldots$.</p>
 
 </div>
 </div>
@@ -13264,7 +13260,11 @@ $\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\in
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2. (1 балл)</strong> Пусть $A_1, A_2, \ldots, A_n,\ldots$ некоторые подмножества $\Omega$, постройте минимальную $\sigma$-алгебру, включающую $A_1, A_2,\ldots, A_n, \ldots$.</p>
+<p><strong>2. (1 балл)</strong></p>
+<ul>
+<li>Доказать, что верхний предел алгебры, порожденной системой $\{A_1,\ldots, A_n\}$, где $A_i\subset\Omega$, $i = 1,\ldots, n$ состоит из $2^{2^n}$ элементов. </li>
+<li>Найти пример системы множеств, когда это не так.</li>
+</ul>
 
 </div>
 </div>
@@ -13289,7 +13289,7 @@ $\bigcap_{i=1}^{\infty} A_i$, $A_1 \cap \overline{A}_{57}$, $\bigcup_{i=40}^{\in
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>4.</strong>
-Монеточка подкидывается бесконечное число раз: $X_n$ равно 132456, если при $n$-ом подбрасывании выпало ребро, и 123456, если решка. И ничего другого выпасть не может. Определим несколько $\sigma$ - алгебр: $\mathcal{F}_n = \sigma(X_1,X_2,\ldots,X_n)$, $\mathcal{H}_n:=\sigma(X_n,X_{n+1},X_{n+2},\ldots)$.</p>
+Монеточка подкидывается бесконечное число раз: $X_n$ равно 1, если при $n$-ом подбрасывании выпал орел, и 0, если решка. И ничего другого выпасть не может. Определим несколько $\sigma$ - алгебр: $\mathcal{F}_n = \sigma(X_1,X_2,\ldots,X_n)$, $\mathcal{H}_n:=\sigma(X_n,X_{n+1},X_{n+2},\ldots)$.</p>
 <p><strong>(0.34 балл)</strong> Приведите по два нетривиальных (т.е. $\Omega$ и $\emptyset$ не называть) примера такого события $A$, что:</p>
 <ul>
 <li>$A\in\mathcal{F}_{2021}$</li>
