--- a/prac05/prac05.html
+++ b/prac05/prac05.html
@@ -13096,7 +13096,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="4.-&#1057;&#1093;&#1077;&#1084;&#1072;-&#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;.-&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;-&#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.">4. &#1057;&#1093;&#1077;&#1084;&#1072; &#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;. &#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072; &#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.<a class="anchor-link" href="#4.-&#1057;&#1093;&#1077;&#1084;&#1072;-&#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;.-&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;-&#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.">&#182;</a></h1>
+<h1 id="5.-&#1057;&#1093;&#1077;&#1084;&#1072;-&#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;.-&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;-&#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.">5. &#1057;&#1093;&#1077;&#1084;&#1072; &#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;. &#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072; &#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.<a class="anchor-link" href="#5.-&#1057;&#1093;&#1077;&#1084;&#1072;-&#1041;&#1077;&#1088;&#1085;&#1091;&#1083;&#1083;&#1080;.-&#1058;&#1077;&#1086;&#1088;&#1077;&#1084;&#1072;-&#1055;&#1091;&#1072;&#1089;&#1089;&#1086;&#1085;&#1072;.">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -13238,9 +13238,9 @@ $$\lim_{n \to \infty}C_n^{k}p_n^k q_n^{n-k} = \frac{\lambda^{k}e^{-\lambda}}{k!}
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>4</strong> Некоторая машина состоит из 10 тысяч деталей. Каждая деталь независимо от других деталей может оказаться неисправной с вероятностью $p_i$, причём</p>
 <ul>
-<li>для $n_1 = 1000$ деталей $p_1 = 0,0003$</li>
-<li>для $n_2 = 2000$ деталей $p_2 = 0,0002$</li>
-<li>для $n_3 = 7000$ деталей $p_3 = 0,0001$</li>
+<li>$1000$ из всех деталей имеют вероятность неисправности $p_1 = 0,0003$</li>
+<li>$2000$ из всех деталей $p_2 = 0,0002$</li>
+<li>$7000$ оставшихся деталей $p_3 = 0,0001$</li>
 </ul>
 <p>Машина не работает, если в ней неисправны хотя бы две детали. Найти вероятность того, что машина не будет работать.</p>
 
