--- a/prac06/prac.html
+++ b/prac06/prac.html
@@ -13096,23 +13096,127 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="6.-&#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.-&#1060;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;-&#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;.">6. &#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077; &#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;. &#1060;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103; &#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;.<a class="anchor-link" href="#6.-&#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.-&#1060;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;-&#1088;&#1072;&#1089;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103;.">&#182;</a></h1><h5 id="&#1052;&#1072;&#1090;&#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.-&#1052;&#1077;&#1076;&#1080;&#1072;&#1085;&#1072;.-&#1052;&#1086;&#1076;&#1072;.">&#1052;&#1072;&#1090;&#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;. &#1052;&#1077;&#1076;&#1080;&#1072;&#1085;&#1072;. &#1052;&#1086;&#1076;&#1072;.<a class="anchor-link" href="#&#1052;&#1072;&#1090;&#1086;&#1078;&#1080;&#1076;&#1072;&#1085;&#1080;&#1077;.-&#1052;&#1077;&#1076;&#1080;&#1072;&#1085;&#1072;.-&#1052;&#1086;&#1076;&#1072;.">&#182;</a></h5>
+<h1 id="6.-&#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.">6. &#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077; &#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.<a class="anchor-link" href="#6.-&#1044;&#1080;&#1089;&#1082;&#1088;&#1077;&#1090;&#1085;&#1099;&#1077;-&#1089;&#1083;&#1091;&#1095;&#1072;&#1081;&#1085;&#1099;&#1077;-&#1074;&#1077;&#1083;&#1080;&#1095;&#1080;&#1085;&#1099;.">&#182;</a></h1>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091;<a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;">&#182;</a></h2>
+<p><img src='data/6fray.jpeg' width=400/></p>
+
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>1.</strong> В партии из 10 деталей имеется 8 стандартных. Наудачу отобраны две
-детали. Составить закон распределения числа стандартных деталей
-среди отобранных.</p>
+<h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
+<li><a href="#chapter1">Теория</a></li>
+<li><a href="#chapter2">Задачи на пару</a></li>
+<li><a href="#chapter3">Домашнее задание</a></li>
+<li><a href="#chapter4">Гробы</a></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#1058;&#1077;&#1086;&#1088;&#1080;&#1103; <a class="anchor" id="chapter1" /><a class="anchor-link" href="#&#1058;&#1077;&#1086;&#1088;&#1080;&#1103;-">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Отображение $\xi: \Omega \to \mathbb{R}$ называется <strong>Дискретной случайной величиной</strong>, если оно принимает не более, чем счетное число значений $x_1, x_2, \ldots x_n, \ldots$, и выполнено утверждение $H_i = \{\omega \in \Omega | \xi(\omega) = x_i\} \in \mathcal{F}$</p>
+<p>Примеры:</p>
+<ul>
+<li>$\xi_1$ - игральный кубик $\xi_1(\omega_2) = \frac{1}{6}$</li>
+<li>$\xi_2$ - остаток при делении на 2, от значения на грани кубика</li>
+<li>$\xi_3 =\left\{
+  \begin{array}{cc}
+  12, &amp; \xi_1 = 1,2,3\\
+  24, &amp; \xi_1 = 4,5\\
+  36, &amp; \xi_1 = 6\\
+  \end{array}\right.$</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Дискретным распределением</strong> называют отображение из счетного подмножества множества $\mathbb{R}$ в $[0,1]$ сумма элементов образа которого равна 1.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<table>
+<thead><tr>
+<th>$x_i$</th>
+<th>12</th>
+<th>24</th>
+<th>36</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>$P(\xi_3 = x_i)$</td>
+<td>0.5</td>
+<td>0.33</td>
+<td>0.17</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Математическое ожидание</strong> (наконец-то)
+$$\mathbb{E}[\xi] = \sum_{i}x_iP(\xi=x_i)$$</p>
+<p>P.S. Матожидание <strong>существует</strong>, если оно корректно определено и конечно.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Если $\xi$ принимает только целые неотрицательные значения, то можно построить <strong>Производящую функцию</strong>
+$$\phi_{\xi}(t) = \sum_{i}t^kP(\xi=x_i) = \mathbb{E}[t^{\xi}]$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1085;&#1072; &#1087;&#1072;&#1088;&#1091; <a class="anchor" id="chapter2" /><a class="anchor-link" href="#&#1047;&#1072;&#1076;&#1072;&#1095;&#1080;-&#1085;&#1072;-&#1087;&#1072;&#1088;&#1091;-">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>1.</strong> В партии из 10 деталей имеется 8 стандартных. Наудачу отобраны две детали. Постройте <strong>случайную величину</strong>, которая описывает количество стандартных деталей среди двух отобранных. Также постройте ее распределение.</p>
 
 </div>
 </div>
@@ -13122,11 +13226,11 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>2.</strong> У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{2}{3}$, $1$ соответственно $\frac{1}{3}$.</p>
 <p>Пусть $\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\mu$ - на неправильной монетке.</p>
-<p>Найти закон распределения, функцию распределения, медиану, квантиль порядка $\frac{1}{4}$, матожидание случайной величины:</p>
+<p>Найти <strong>распределения</strong> и <strong>матожидания</strong> случайных величин:</p>
 <ul>
-<li>$\theta = 2\xi +\mu +  3$</li>
-<li>$\theta = \xi\mu$</li>
-<li>$\theta = max(\xi-4, \mu)$</li>
+<li>$\theta = \xi +\mu + 1$</li>
+<li>$\theta = -2\xi\mu$</li>
+<li>$\theta = \frac{\mu}{2^{\xi}}$</li>
 </ul>
 
 </div>
@@ -13135,8 +13239,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>3.</strong>
-Пусть случайные величины $\xi$ и $\eta$ независимы и распределены по закону Пуассона с параметрами $\lambda$ и $\mu$. Докажите, что величина $\xi+\eta$ тоже распределена по закону Пуассона и найдите параметр этого распределения.</p>
+<p><strong>3.</strong> Мы 2 раза бросили игральный кубик. Пусть $\xi_1$ - сл.в. результата 1 броска, $\xi_2$ - сл.в. результата 2 броска.</p>
+<p>В чем разница между случайными величинами $\xi_1 \xi_1$ и $\xi_1 \xi_2$? Найдите их матожидания.</p>
 
 </div>
 </div>
@@ -13144,8 +13248,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>4.</strong> Монета выпадает орлом с вероятностью $p &gt; 0$. Пусть $\xi$ — число подбрасываний, необходимых для достижения $1$ выпадения орла. Найти производящую
-функцию для вероятности $\xi$, а также матожидание $\xi$.</p>
+<p><strong>4.</strong> Монета выпадает орлом с вероятностью $p &gt; 0$. Пусть $\xi$ — число подбрасываний, необходимых для достижения $1$ выпадения орла. Найти производящую функцию для $\xi$.</p>
 
 </div>
 </div>
@@ -13153,19 +13256,28 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#1044;&#1047;">&#1044;&#1047;<a class="anchor-link" href="#&#1044;&#1047;">&#182;</a></h2>
+<p><strong>5.</strong> Доказать, что $\phi_{\xi}(1)' = \mathbb{E}[\xi]$ и найти матожидание в предыдущей задаче.</p>
+
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>1.</strong> У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{1}{4}$, $1$ соответственно $\frac{3}{4}$. Пусть $\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\mu$ - на неправильной монетке.</p>
-<p>Найти закон распределения, функцию распределения, медиану, квантиль порядка $\frac{1}{4}$, матожидание случайной величины:</p>
+<h2 id="&#1044;&#1047;-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>1.</strong>(2) У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{1}{4}$, $1$ соответственно $\frac{3}{4}$. Пусть $\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\mu$ - на неправильной монетке.</p>
+<p>Найти функцию распределения, матожидание случайной величины:</p>
 <ul>
-<li>$\theta = 2\xi -\mu$</li>
-<li>$\theta = \xi^2$</li>
-<li>$\theta = max(\xi+7, \mu+1)$</li>
+<li>(0.5) $\theta = \xi -2*\mu$</li>
+<li>(0.5) $\theta = max(\xi-3, \mu)$</li>
+<li>(0.5) $\theta = \xi^2 + \mu^3$</li>
+<li>(0.5) $\theta = \xi^\mu$</li>
 </ul>
 
 </div>
@@ -13176,7 +13288,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>2.</strong> Из двух орудий поочередно ведется стрельба по
     цели до первого попадания одним из орудий. Вероятность
-    попадания в цель первым орудием равна 0,3, вторым - 0,7.
+    попадания в цель первым орудием равна 0,2, вторым - 0,8.
     Начинает стрельбу первое орудие. Составить законы 
     распределения дискретных случайных величин $\xi$ и $\eta$ - числа
     израсходованных снарядов соответственно первым и 
@@ -13188,7 +13300,33 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>4.</strong> Пусть случайные величины $\xi_1,\ldots, \xi_n$ независимы в совокупности и распределены по закону Пуассона с параметрами $\lambda_1,\ldots, \lambda_n$ соответственно. Докажите, что величина $\sum_{i=1}^{n}\xi_i$ тоже распределена по закону Пуассона и найдите параметр этого распределения.</p>
+<p><strong>3.</strong>
+Пусть случайные величины $\xi$ и $\eta$ независимы и распределены по закону Пуассона с параметрами $\lambda$ и $\mu$. Докажите, что величина $\xi+\eta$ тоже распределена по закону Пуассона и найдите параметр этого распределения.</p>
+<p>P.S. Найдите производящую функцию для распределения Пуассона и докажите, что производящая функция нового распределения соответствует распределению Пуассона.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>4</strong> Докажите, что производящая функция для биномиального распределения (кол-во успехов в схеме Бернулли) с вероятностью $p$ и $n$ испытаниями равна 
+$$\phi_{\xi}(t) = ((1-p) + pe^t)^n$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>1.</strong> (0.5) Пусть случайные величины $\xi_1,\ldots, \xi_n$ независимы в совокупности и распределены по закону Пуассона с параметрами $\lambda_1,\ldots, \lambda_n$ соответственно. Докажите, что величина $\sum_{i=1}^{n}\xi_i$ тоже распределена по закону Пуассона и найдите параметр этого распределения.</p>
 
 </div>
 </div>
