--- a/prac06/prac.html
+++ b/prac06/prac.html
@@ -13201,7 +13201,7 @@ $$\mathbb{E}[\xi] = \sum_{i}x_iP(\xi=x_i)$$</p>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Если $\xi$ принимает только целые неотрицательные значения, то можно построить <strong>Производящую функцию</strong>
-$$\phi_{\xi}(t) = \sum_{i}t^kP(\xi=x_i) = \mathbb{E}[t^{\xi}]$$</p>
+$$\phi_{\xi}(t) = \sum_{k}t^kP(\xi=k) = \mathbb{E}[t^{\xi}]$$</p>
 
 </div>
 </div>
@@ -13224,7 +13224,7 @@ $$\phi_{\xi}(t) = \sum_{i}t^kP(\xi=x_i) = \mathbb{E}[t^{\xi}]$$</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2.</strong> У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{2}{3}$, $1$ соответственно $\frac{1}{3}$.</p>
+<p><strong>2.</strong> У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{2}{3}$, $1$ соответственно $\frac{1}{3}$. (Очевидно, но данные сл.вел., конечно же, независимы)</p>
 <p>Пусть $\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\mu$ - на неправильной монетке.</p>
 <p>Найти <strong>распределения</strong> и <strong>матожидания</strong> случайных величин:</p>
 <ul>
@@ -13272,9 +13272,10 @@ $$\phi_{\xi}(t) = \sum_{i}t^kP(\xi=x_i) = \mathbb{E}[t^{\xi}]$$</p>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>1.</strong>(2) У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\frac{1}{4}$, $1$ соответственно $\frac{3}{4}$. Пусть $\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\mu$ - на неправильной монетке.</p>
+<p>(Очевидно, но данные сл.вел., конечно же, независимы)</p>
 <p>Найти функцию распределения, матожидание случайной величины:</p>
 <ul>
-<li>(0.5) $\theta = \xi -2*\mu$</li>
+<li>(0.5) $\theta = \xi -2\mu$</li>
 <li>(0.5) $\theta = max(\xi-3, \mu)$</li>
 <li>(0.5) $\theta = \xi^2 + \mu^3$</li>
 <li>(0.5) $\theta = \xi^\mu$</li>
@@ -13288,7 +13289,7 @@ $$\phi_{\xi}(t) = \sum_{i}t^kP(\xi=x_i) = \mathbb{E}[t^{\xi}]$$</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>2.</strong> Из двух орудий поочередно ведется стрельба по
     цели до первого попадания одним из орудий. Вероятность
-    попадания в цель первым орудием равна 0,2, вторым - 0,8.
+    попадания в цель первым орудием равна $0,2$, вторым - $0,8$.
     Начинает стрельбу первое орудие. Составить законы 
     распределения дискретных случайных величин $\xi$ и $\eta$ - числа
     израсходованных снарядов соответственно первым и 
