fix 8th and add 9th prac

--- a/prac07/prac.html
+++ b/prac07/prac.html
@@ -13248,6 +13248,7 @@ $$\mathbb{E}[a\xi + b\mu] = a\mathbb{E}[\xi] + b\mathbb{E}[\mu]$$
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>4.</strong> В Швейцарском Фейсбуке очень любят сотрудников, поэтому решили, устраивать всем выходной, когда у кого-нибудь из людей день рождение. Однако в этом случае они не могут набирать много людей, так как с большой вероятностью работа будет не выполнена. Работник рождается в любой из дней в году (365 дней) с равной веротяностью. Найдите наибольшее матожидание величины (кол-во сотрудников * кол-во рабочих дней).</p>
+<p>P.S. Надо найти при каком количестве сотрудников матожидание величины будет максимальным и вывести это значение.</p>
 
 </div>
 </div>
