fix 8th add task 2 to html

--- a/prac08/prac.html
+++ b/prac08/prac.html
@@ -13301,7 +13301,7 @@ $$cor(\xi, \mu) = \frac{cov(\xi, \mu)}{\mathbb{D}[\xi]\mathbb{D}[\mu]}$$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2.</strong> Даны 2 случайные величины X и Y, принимающие значения {1, 2, 3, 4}. X c вероятностями 1/4 каждое и Y c вероятностями 1/10, 2/10, 3/10 и 4/10 соответственно.</p>
+<p><strong>2.</strong> Даны 2 случайные величины X и Y, принимающие значения {1, 2, 3, 4}. X c вероятностями 1/4 каждое и Y c вероятностями 1/10, 2/10, 3/10 и 4/10 соответственно. Найти корреляцию $X$ и $Y$.</p>
 
 </div>
 </div>
