--- a/prac10/prac.html
+++ b/prac10/prac.html
@@ -13103,6 +13103,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><img src='data/lebegdarbu.png' width=400/></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1057;&#1086;&#1076;&#1077;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;">&#182;</a></h2><ul>
 <li><a href="#chapter1">Теория</a></li>
 <li><a href="#chapter2">Задачи на пару</a></li>
@@ -13209,7 +13217,7 @@ $$F_{\xi}(b) - F_{\xi}(a) = \int_{a}^{b}\rho_{\xi}(x)dx$$</p>
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>1.</strong> Нарисовать для Параболы суммы Дарбу для Римана и для Лебега</p>
-<p><strong>2.</strong> Пример функции, которая неинтегрируема по Риману, но интегрируется по Лебега</p>
+<p><strong>2.</strong> Пример функции, которая неинтегрируема по Риману, но интегрируется по Лебегу</p>
 <p><strong>3.</strong>
 Случайная величина $\xi$ имеет функцию распределения $F_{\xi}$, определенную равенством
 $$F_\xi(x) =\left\{
